fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,8 @@
 		--scrollbar-track: 0deg 0% 93.33%;
 		--scrollbar-thumb: 0deg 0% 53.33%;
 		--scrollbar-thumb-hover: 0deg 0% 33.33%;
+
+		--editor-background: 0deg 0% 100%;
 	}
 
 	.dark {
@@ -78,6 +80,8 @@
 		--scrollbar-track: 0deg 0% 18.04%;
 		--scrollbar-thumb: 0deg 0% 53.33%;
 		--scrollbar-thumb-hover: 0deg 0% 33.33%;
+
+		--editor-background: 223.64deg 47.83% 4.51%;
 	}
 }
 
@@ -96,8 +100,8 @@
 	.font-sans {
 		font-family: "Space Grotesk", sans-serif;
 	}
-
-	.font-mono {
-		font-family: "Space Mono", sans-serif;
+	.cm-editor,
+	.cm-gutter {
+		@apply bg-editorBackground;
 	}
 }
